# spyware

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  flake.nix  result  rust-toolchain.toml
graphql/: suwayomi_queries.graphql  suwayomi_schema.graphql
src/: main.rs  mangas.rs
src/commands/: cards.rs  misc.rs  mod.rs  music.rs  rolls.pest  rolls.rs
src/commands/custom/: cthulhu_dark.rs  mod.rs
