[package]
name = "spyware"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "spyware"
path = "src/main.rs"

[lib]
name = "spyware"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = "0.4"
csv = "1"
derive_more = "0.99"
dotenv = "0.15"
log = "0.4"
log4rs = "1"
once_cell = "1"
rand = "0.8"
serde = "1"
serenity = "0.11"
simple_logger = "4"
songbird = "0.3"
tokio = { version = "1", features = ["macros", "signal", "rt-multi-thread", "time"] }
youtube_dl = "0.9"