[package]
name = "spyware"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = "0.4"
csv = "1"
derive_more = "0.99"
graphql_client = "0.14"
log = "0.4"
log4rs = "1"
once_cell = "1"
poise = "0.6"
rand = "0.8"
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
serde = "1"
simple_logger = "4"
songbird = { version = "0.4", features = ["builtin-queue"] }
symphonia = { version = "0.5", features = ["mp3"] }
tokio = { version = "1", features = ["macros", "signal", "rt-multi-thread", "time"] }
url = "2"
uuid = { version = "1", features = ["v4", "fast-rng", "macro-diagnostics"] }
youtube_dl = "0.9"
